--- a/.env
+++ b/.env
@@ -1,13 +1,14 @@
 SERVER1_ADDR = ":4001"
 SERVER2_ADDR = ":4002"
-MYSQL_DSN = "root:root@tcp(127.0.0.1:3306)/antiy_license?charset=utf8mb4&parseTime=True&loc=Local"
+MYSQL_DSN = "root:root@tcp(127.0.0.1:3306)/demo?charset=utf8mb4&parseTime=True&loc=Local"
 REDIS_ADDR = "localhost:6379"
-REDIS_PASSWORD = "root"
-REDIS_DB = 0
+REDIS_PASSWORD = "123456"
+REDIS_DB = 1
 KAFKA_BROKERS = "localhost:9092"
 
-
-# 限流相关
-WINDOWS_SIZE = 10 # 窗口的大小 s
-BUCKET_COUNT = 10 # 每个窗口拆分成的份数
-REQUEST_LIMIT = 10 # 每个窗口允许通过的请求数，这个做成配置不太合理，每个接口的承载能力是不一样的，最好还是做成动态的。
+# 窗口的大小
+WINDOWS_SIZE = 10
+# 每个窗口拆分成的份数
+BUCKET_COUNT = 10
+# 每个窗口允许通过的请求数，这个做成配置不太合理，每个接口的承载能力是不一样的，最好还是做成动态的。
+REQUEST_LIMIT = 10
